2010-07-13  Andreia Gaita  <avidigal@novell.com>

	* Generator.cs: add support for c++ namespaces and put all the
	  types in the generated headers inside a Moonlight namespace

2010-07-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Generator.cs: Set CharSet=Auto for p/invokes.

2010-06-23  Alan McGovern  <amcgovern@novell.com>

	* Generator.cs: Lets cheat because it's easier, both
	  System.Windows.Cursor.CursorType and
	  System.Windows.Cursor.Cursor map to Kind.CURSORTYPE. Really
	  we should not have 'CURSORTYPE' at all, but we can't declare
	  our native enum with the correct name 'Cursor' because it
	  conflicts with a typedef in X11. This is the simplest hack
	  to work around it.

2010-06-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Generator.cs:
	* GlobalInfo.cs: Add support for [Editor]Browsable attributes/metadata.

2010-06-16  Chris Toshok  <toshok@ximian.com>

	* TypeReference.cs: MoonClipboardType -> int.

2010-06-14  Chris Toshok  <toshok@ximian.com>

	* TypeReference.cs: generate code correctly using new message box
	enums.

2010-05-28  Jeffrey Stedfast  <fejj@novell.com>

	* TypeReference.cs (GetNPType): Revert previous change, found a
	better way.

	* Generator.cs (GenerateJSBindings): Instead of special-casing
	doubles to accept int or double, we'll do that in the plugin's
	check_arg_list() function instead. When getting a double from an
	NPVariant, use the new NPVARIANT_*AS*_DOUBLE() macro which will
	up-cast ints to doubles if needed.

2010-05-27  Jeffrey Stedfast  <fejj@novell.com>

	* TypeReference.cs (GetNPType): Any function that takes doubles
	*may* get integers from js, so return "(id)" as our type.

	* Generator.cs (GenerateJSBindings): Handle ParamerTypes of "(id)"
	by promoting ints to doubles for arguments.

2010-05-27  Jeffrey Stedfast  <fejj@novell.com>

	* Generator.cs (GenerateJSBindings): Fixes for the
	plugin-class.g.cpp generator to allow functions to return Point
	instead of Point*.
