@@ -1,3 +1,8 @@
+2010-07-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* Generator.cs: Don't create a create_inst_func for types that aren't
+	DependencyObjects. Fixes a crash with #XamlReflection.2.
+
 2010-07-13  Andreia Gaita  <avidigal@novell.com>
 
 	* Generator.cs: add support for c++ namespaces and put all the
